//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table users {
  id BigInt [pk, increment]
  uuid String [unique, not null]
  name String [not null]
  email String [unique, not null]
  birthDate DateTime [not null]
  profession String
  password String [not null]
  passwordChangeRequest password_change_request [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  places places [not null]
  people people [not null]
  records records [not null]
  relationships relationships [not null]
}

Table relationships {
  id BigInt [pk, increment]
  uuid String [unique, not null]
  type RelationshipType [not null]
  user users [not null]
  userId BigInt [not null]
  person people [not null]
  personId BigInt [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table records {
  id BigInt [pk, increment]
  uuid String [unique, not null]
  event String [not null]
  thought String [not null]
  behavior String [not null]
  emotions emotions [not null]
  people people [not null]
  user users [not null]
  userId BigInt [not null]
  place places [not null]
  placeId BigInt [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table emotions {
  id BigInt [pk, increment]
  uuid String [unique, not null]
  name String [not null]
  records records [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table people {
  id BigInt [pk, increment]
  uuid String [unique, not null]
  name String [not null]
  user users [not null]
  userId BigInt [not null]
  relationships relationships [not null]
  records records [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table places {
  id BigInt [pk, increment]
  uuid String [unique, not null]
  name String [not null]
  user users [not null]
  userId BigInt [not null]
  records records [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table password_change_request {
  token String [pk]
  user users [not null]
  userId BigInt [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table EmotionToRecord {
  emotionsId BigInt [ref: > emotions.id]
  recordsId BigInt [ref: > records.id]
}

Table PersonToRecord {
  peopleId BigInt [ref: > people.id]
  recordsId BigInt [ref: > records.id]
}

Enum RelationshipType {
  Father
  Mother
  Boyfriend
  Girlfriend
}

Ref: relationships.userId > users.id [delete: Cascade]

Ref: relationships.personId > people.id [delete: Cascade]

Ref: records.userId > users.id [delete: Cascade]

Ref: records.placeId > places.id [delete: Cascade]

Ref: people.userId > users.id [delete: Cascade]

Ref: places.userId > users.id [delete: Cascade]

Ref: password_change_request.userId > users.id [delete: Cascade]